fix tabs layout bug

--- a/assets/sass/utility/tabs.scss
+++ b/assets/sass/utility/tabs.scss
@@ -42,7 +42,7 @@
         box-sizing: border-box;
     }
 
-    li {
+    .tr-tabs > li {
         margin: 0 12px 0 0;
         font-weight: normal;
         font-size: 13px;
